--- a/BlindCatAvalonia/SDcontrols/LoadingLayout.axaml
+++ b/BlindCatAvalonia/SDcontrols/LoadingLayout.axaml
@@ -5,7 +5,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:models="using:BlindCatCore.Models"
              x:Class="BlindCatAvalonia.SDcontrols.LoadingLayout"
-             x:DataType="models:LoadingStrDesc"
              d:DesignHeight="400"
              d:DesignWidth="400"
              Background="#80000000"
@@ -22,11 +21,10 @@
                                  IsActive="True"
                                  Mode="Wave"
                                  SpeedRatio="1.0"/>
-            <TextBlock MaxWidth="170"
+            <TextBlock x:Name="labelTitle"
+                       MaxWidth="170"
                        Margin="10,0,10,10"
                        Foreground="White"
-                       IsVisible="{Binding Description, Converter={StaticResource IsNotEmpty}}"
-                       Text="{Binding Description}"
                        TextAlignment="Center"
                        TextWrapping="WrapWithOverflow">
             </TextBlock>
