--- a/BlindCatAvalonia/Views/StoragePresentView.axaml
+++ b/BlindCatAvalonia/Views/StoragePresentView.axaml
@@ -1,22 +1,22 @@
-<Grid xmlns="https://github.com/avaloniaui"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:enums="using:BlindCatCore.Enums"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:models="using:BlindCatCore.Models"
-      xmlns:panels="using:BlindCatAvalonia.Panels"
-      xmlns:sd="using:BlindCatAvalonia.SDcontrols"
-      xmlns:sys="clr-namespace:System;assembly=System.Runtime"
-      xmlns:vm="using:BlindCatCore.ViewModels"
-      x:Class="BlindCatAvalonia.StoragePresentView"
-      x:DataType="vm:StoragePresentVm"
-      x:Name="root"
-      d:DesignHeight="50"
-      d:DesignWidth="50"
-      sd:Scaffolt.Subtitle="{Binding StorageName}"
-      sd:Scaffolt.Title="Encrypted Storage"
-      ColumnDefinitions="*, Auto"
-      mc:Ignorable="d">
+<UserControl xmlns="https://github.com/avaloniaui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:enums="using:BlindCatCore.Enums"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:models="using:BlindCatCore.Models"
+             xmlns:muxc="using:Avalonia.Controls.Primitives"
+             xmlns:panels="using:BlindCatAvalonia.Panels"
+             xmlns:sd="using:BlindCatAvalonia.SDcontrols"
+             xmlns:sys="clr-namespace:System;assembly=System.Runtime"
+             xmlns:vm="using:BlindCatCore.ViewModels"
+             x:Class="BlindCatAvalonia.StoragePresentView"
+             x:DataType="vm:StoragePresentVm"
+             x:Name="root"
+             d:DesignHeight="50"
+             d:DesignWidth="50"
+             sd:Scaffolt.Subtitle="{Binding StorageName}"
+             sd:Scaffolt.Title="Encrypted Storage"
+             mc:Ignorable="d">
 
     <sd:Scaffolt.MenuItems>
         <sd:MenuItem Command="{Binding CommandSearchMode}"
@@ -92,70 +92,96 @@
         </Grid>
     </sd:Scaffolt.CustomNavigationBar>
 
-    <sd:VirtualGridView Grid.Column="0"
-                        ItemHeight="250"
-                        ItemWidth="250"
-                        ItemsSource="{Binding Files}">
-        <sd:VirtualGridView.ItemTemplate>
-            <DataTemplate x:DataType="models:StorageFile">
-                <sd:PreviewButton Command="{Binding #root.((vm:StoragePresentVm)DataContext).CommandOpenItem}"
-                                  CommandParameter="{Binding .}"
-                                  FileName="{Binding FileName}"
-                                  IsSelected="{Binding IsSelected}"
-                                  RecycleChildren="{Binding #img}"
-                                  SelectedChangedCommand="{Binding #root.((vm:StoragePresentVm)DataContext).CommandSelectedChanged}"
-                                  Tags="{Binding Tags}">
+    <sd:ScrollViewerExt AllowAutoHide="False"
+                        VerticalScrollBarVisibility="Visible">
+        <ItemsRepeater ItemsSource="{Binding Files}">
+            <ItemsRepeater.Layout>
+                <UniformGridLayout ItemsStretch="Uniform"
+                                   MinItemHeight="250"
+                                   MinItemWidth="250"/>
+            </ItemsRepeater.Layout>
 
-                    <!--right mouse menus-->
-                    <sd:PreviewButton.ContextMenu>
-                        <ContextMenu>
-                            <!--delete item-->
-                            <MenuItem Command="{Binding #root.((vm:StoragePresentVm)DataContext).CommandDeleteItem}"
+            <ItemsRepeater.ItemTemplate>
+                <DataTemplate x:DataType="models:IStorageElement">
+                    <sd:PreviewButton MaxWidth="500"
+                                      MaxHeight="500"
+                                      Command="{Binding #root.((vm:StoragePresentVm)DataContext).CommandOpenItem}"
                                       CommandParameter="{Binding .}"
-                                      Header="Delete item(s)"/>
+                                      FileName="{Binding FileName}"
+                                      IsSelected="{Binding IsSelected}"
+                                      RecycleChildren="{Binding #img}"
+                                      SelectedChangedCommand="{Binding #root.((vm:StoragePresentVm)DataContext).CommandSelectedChanged}"
+                                      SelectedSpanCommand="{Binding #root.((vm:StoragePresentVm)DataContext).CommandSelectionSpan}"
+                                      Tags="{Binding Tags}">
+                        <!--right mouse menus-->
+                        <sd:PreviewButton.ContextMenu>
+                            <ContextMenu>
+                                <!--merge to new album-->
+                                <MenuItem Command="{Binding #root.((vm:StoragePresentVm)DataContext).CommandMoveToNewAlbum}"
+                                          CommandParameter="{Binding .}"
+                                          Header="Merge to new album"/>
+                                <!--move to album-->
+                                <MenuItem Command="{Binding #root.((vm:StoragePresentVm)DataContext).CommandMoveToAlbum}"
+                                          CommandParameter="{Binding .}"
+                                          Header="Move to album"/>
+                                <!--delete item-->
+                                <MenuItem Command="{Binding #root.((vm:StoragePresentVm)DataContext).CommandDeleteItem}"
+                                          CommandParameter="{Binding .}"
+                                          Header="Delete item(s)"/>
+                                <!--explore item-->
+                                <MenuItem Command="{Binding #root.((vm:StoragePresentVm)DataContext).CommandExploreItem}"
+                                          CommandParameter="{Binding .}"
+                                          Header="Explore item"/>
+                            </ContextMenu>
+                        </sd:PreviewButton.ContextMenu>
 
-                            <!--explore item-->
-                            <MenuItem Command="{Binding #root.((vm:StoragePresentVm)DataContext).CommandExploreItem}"
-                                      CommandParameter="{Binding .}"
-                                      Header="Explore item"/>
-                        </ContextMenu>
-                    </sd:PreviewButton.ContextMenu>
+                        <Grid>
+                            <sd:ImagePreview x:Name="img"
+                                             Source="{Binding .}"
+                                             Stretch="UniformToFill"/>
 
-                    <Grid>
-                        <sd:ImagePreview x:Name="img"
-                                         Source="{Binding .}"
-                                         Stretch="UniformToFill"/>
+                            <Viewbox Width="120"
+                                     Height="120"
+                                     IsVisible="{Binding IsVideo}">
+                                <Canvas Width="24"
+                                        Height="24">
+                                    <Path Data="M10,16.5V7.5L16,12M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
+                                          Fill="#8FFF"/>
+                                </Canvas>
+                            </Viewbox>
 
-                        <Viewbox Width="120"
-                                 Height="120"
-                                 IsVisible="{Binding IsVideo}">
-                            <Canvas Width="24"
-                                    Height="24">
-                                <Path Data="M10,16.5V7.5L16,12M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
-                                      Fill="#8FFF"/>
-                            </Canvas>
-                        </Viewbox>
+                            <Border Width="90"
+                                    Height="90"
+                                    HorizontalAlignment="Left"
+                                    VerticalAlignment="Top"
+                                    Background="#A000"
+                                    CornerRadius="0,0,10,0"
+                                    IsVisible="{Binding IsAlbum}">
+                                <TextBlock HorizontalAlignment="Center"
+                                           VerticalAlignment="Center"
+                                           FontSize="22"
+                                           FontWeight="SemiBold"
+                                           Foreground="White"
+                                           Text="{Binding ChildrenCount, StringFormat='+{0}'}"/>
+                            </Border>
 
-                        <TextBlock FontSize="16"
-                                   Foreground="Red"
-                                   IsVisible="{Binding IsNoFile}">
-                            No file
-                        </TextBlock>
+                            <TextBlock FontSize="16"
+                                       Foreground="Red"
+                                       IsVisible="{Binding IsErrorNoFile}">
+                                No file
+                            </TextBlock>
 
 
-                        <TextBlock FontSize="16"
-                                   Foreground="Red"
-                                   IsVisible="{Binding IsNoDBRow}">
-                            Not indexed
-                        </TextBlock>
+                            <TextBlock FontSize="16"
+                                       Foreground="Red"
+                                       IsVisible="{Binding IsErrorNoDBRow}">
+                                Not indexed
+                            </TextBlock>
 
-                    </Grid>
-                </sd:PreviewButton>
-            </DataTemplate>
-        </sd:VirtualGridView.ItemTemplate>
-    </sd:VirtualGridView>
-
-    <!--Right panel-->
-    <!--<Panel>
-	</Panel>-->
-</Grid>
+                        </Grid>
+                    </sd:PreviewButton>
+                </DataTemplate>
+            </ItemsRepeater.ItemTemplate>
+        </ItemsRepeater>
+    </sd:ScrollViewerExt>
+</UserControl>
